fixed bug where content wasn't showing on mobile devices.

--- a/themes/studentlife/scss/plugins/_slick.scss
+++ b/themes/studentlife/scss/plugins/_slick.scss
@@ -71,7 +71,7 @@ $slick-dot-character: '\2022' !default;
 .slick-slider .slick-list,
 .slick-track,
 .slick-slide,
-.slick-slide img {
+.slick-slide > img {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
